# nmp-autoavanza

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
UI Files Upload/: index.html
UI Files Upload/00_Archive/: UI Files Upload.ipynb
UI/old/: main.py
UI/old/archive/: index.html
UI/old/logic/: image_utils.py
UI/old/ui/: capture_window.py  form_window.py  preview_window.py
UI/whatsapp bot/: Untitled.ipynb  app.py  ngrok_recovery_codes.txt
autoavanza/app/: main.py
bot/application/: application_stack.py
bot/application/apis/: __init__.py  webhooks.py
bot/application/databases/: databases.py
bot/application/lambdas/: lambdas.py
bot/application/lambdas/code/process_stream/: lambda_function.py
bot/application/lambdas/code/whatsapp_in/: lambda_function.py
bot/application/lambdas/layers/: __init__.py  layers.py
bot/tests/unit/: test_application_stack.py
notebooks/: ID App.ipynb  MontePiedad_Avance3_EDA_SCRAPE.ipynb  MontePiedad_Avance5_SCRAPE_FE.ipynb  MontePiedad_Denoising.ipynb  MontePiedad_Denoising_02.ipynb  MontePiedad_Extraction.ipynb  MontePiedad_Rules.ipynb  image_analysis_01.ipynb  initial_notebook.ipynb  starter_template.ipynb
src/app/: app.py  document.py  main.py  scan.py
src/app_bot/langchain_agent/: dynamodb_base_chat_message.py  service.py
src/app_bot/process_stream/: service.py
src/app_bot/whatsapp_in/: service.py
src/app_bot/whatsapp_out/: service.py
src/autoavanza/: document.py  main.py
src/bot/: app.py  cdk.context.json
src/bot/application/: __init__.py  application_stack.py
src/bot/application/lambdas/: __init__.py  lambdas.py
src/bot/application/lambdas/code/lang_chain_agent/: lambda_function.py
src/bot/application/lambdas/code/process_stream/: lambda_function.py
src/bot/application/lambdas/code/whatsapp_in/: lambda_function.py
src/bot/application/lambdas/layers/: layers.py
src/document_service/: buckets.py  lifespan.py  main.py  tables.py
src/infrastructure/application/: application_stack.py
src/infrastructure/application/databases/: __init__.py  databases.py
src/infrastructure/application/storage/: storage.py
