[project]
name = "nmp-autoavanza"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "transformers (>=4.51.2,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "progress (>=1.6,<2.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
